Commit #3 - Login functionality added.
Login screen has been created in full. When user inputs username/password, user will get a toast if username/password is invalid or unfound or will be pushed to an index page if login is successful.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,8 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="SignUpActivity"></activity>
-        <activity android:name="NewUserActivity"></activity>
+        <activity android:name="IndexActivity"></activity>
     </application>
 
 </manifest>
