--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -24,8 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="SignUpActivity"></activity>
-        <activity android:name="NewUserActivity"></activity>
+        <activity android:name="IndexActivity"></activity>
     </application>
 
 </manifest>
