--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.upenn.med.researchaide.IndexActivity" />
         </activity>
+        <activity android:name="UserInfoActivity"></activity>
     </application>
 
 </manifest>
