--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="info.androidhive.googlemapsv2.permission.MAPS_RECEIVE" />
 
     <application
         android:allowBackup="true"
@@ -35,7 +38,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.upenn.med.researchaide.IndexActivity" />
         </activity>
-        <activity android:name="UserInfoActivity"></activity>
+        <activity android:name=".UserInfoActivity" >
+        </activity>
+        <activity
+            android:name=".DirectionActivity"
+            android:label="@string/title_activity_direction"
+            android:parentActivityName=".IndexActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="IndexActivity" />
+        </activity>
     </application>
 
 </manifest>
