--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,10 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="info.androidhive.googlemapsv2.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="true"
@@ -48,13 +52,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="IndexActivity" />
         </activity>
-        <activity
-            android:name=".ScheduleActivity"
-            android:label="@string/title_activity_schedule" >
-        </activity>
-        <activity
-            android:name=".CompensationActivity"
-            android:label="@string/title_activity_compensation" >
+         <activity
+            android:name=".TellfriendActivity"
+            android:label="@string/title_activity_friend"
+            android:parentActivityName=".IndexActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="IndexActivity" />
         </activity>
     </application>
 
